Fixed a AggregationEngineTest
- renamed workJob to completeJob to indicate the state change that will take place.
- refactored workJob to use a guard instead of a if-else.
- Fixed tests to use completeJob